<resources>
    <string name="app_name">SecureYou</string>
    <string name="key_name">name</string>
    <string name="titleimage">TitleImage</string>
    <string name="start_button">Start Button</string>
    <string name="persons_name">Persons name</string>
    <string name="storyImage">StoryImage</string>
    <string name="page0">You check your phone, it says 16:55. You just
        finished a tough project and are excited to get home for the day.
        While getting ready to leave the office, you check your email and
        see there is something new in your inbox that looks to be from
        someone in upper management.</string>
    <string name="page0_choice1">Open the new email</string>
    <string name="page0_choice2">Go home and deal with it later</string>
    <string name="page1">You open the email and it reads, \n
        "Dear %1$s, \n \n
        It has come to our attention that the system that stores employee
        information requires an update so you will need to enter
        your login information into the linked form at the bottom
        of the email so that the system can be updated with your
        current login details."</string>
    <string name="page1_choice1">Enter required information</string>
    <string name="page1_choice2">Ask supervisor about the email</string>
    <string name="page2">You leave work just after receiving the email to go
        home, traffic is not as bad as usual and you make it home in good time.
        For dinner you have a plate of lasagna and try to decide what to do for
        the evening.  </string>
    <string name="page2_choice1">Watch TV</string>
    <string name="page2_choice2">Play Video Games</string>
    <string name="page3">You enter your credentials into the web-page that the
        link directed you too. You filled it in quickly as you wanted to get
        home to watch "The Chase". Once home you relax for the evening and
        forget about the email. </string>
    <string name="page3_choice1">Go to bed early</string>
    <string name="page3_choice2">Stay up later</string>
    <string name="page4">At around 8 PM you decide it might be worth checking the
        email before going into work the next day. It reads,\n
        "Dear %1$s,\n It has come to our attention that the system that stores
        employee information requires an update so you will need to enter
        your login information into the linked form at the bottom
        of the email so that the system can be updated with your
        current login details."  </string>
    <string name="page4_choice1">Enter required information</string>
    <string name="page4_choice2">Deal with email at work tomorrow</string>
    <string name="page5">You get into work early to find that there has been
        a company wide phishing attack in which confidential company information
        was released. You begin to remember the email from yesterday and decide
        to take a closer look.</string>
    <string name="page5_choice1">Look at email again closely</string>
    <string name="page5_choice2">Tell supervisor about email</string>
    <string name="page6">You report the information to your supervisor and
        are informed that there has been no change to the company\'s storage
        system so therefore should not have received an email. You are
        advised to not input anything into the form. The supervisor alerts the
        security team within the company and an email is sent out alerting
        others who may have received the email. \n \n Good Job! You have saved
        the company\'s secrets.</string>
    <string name="page7">You look at the email again and see there are some signs
        that this email is not from a legitimate source.\n Some tell-tale signs of
        phishing can include an email address sent from a public domain such as
        "@gmail.com", no legitimate organisation will contact from an address like
        this. Another simple sign that an email may not be legitimate is that it is
        poorly written with even some potential misspellings including that of the
        domain name. \n
        \n
         Furthermore, the most common phishing emails will begin very generically as there
        are many emails sent at once to different people. This results in many phishing
        emails beginning with greetings such as “Dear Customer” or “Dear Employee”. However
        this does not mean that an email that does use your name is not a phishing email as
        there are many social engineering methods that an attacker could use to find your name,
        this is referred to as a spear-phishing attack so it is best to look for other signs also. \n
        \n
        Moreover, it is good to be on the look-out for emails that request urgent action is taken,
        such as emails warning that “your account will be closed” or “your account has been
        compromised” as these are used to generate a greater concern from the reader increasing the
        chance of the reader clicking a link. \n \n

        It is important to note that phishing scams are not only received through email. They can come
        through a variety of means, such as through messenger apps. It is important to make sure any message
        received in relation to anything about private credentials is legit, this can be done by contacting the
        sender company at an email or phone number you have used for legitimate contact before. Some sites that
        are commonly impersonated by scammers are Facebook, Twitter and LinkedIn, with LinkedIn recording the most
        attempted phishing scams of the three.   \n \n

        Signs that you may be on a phishing website include a pop-up or pop-ups being displayed as
        soon as you enter the website. These pop-ups will usually request your username and
        password. If this happens it is best to leave the site without entering any information. \n
        \n
        Another way to check if a site is secure is to check the web address. It is worth having a
        closer look at things such as misspelled/incorrect company names. Additionally, when looking
        at the web address “https” is safer than “http”.
 </string>
    <string name="page8"> You go to a company mandated workshop to educate yourself on cyber-security, from this you learn some valuable things.  \n Some tell-tale signs of
        phishing can include an email address sent from a public domain such as
        "@gmail.com", no legitimate organisation will contact from an address like
        this. Another simple sign that an email may not be legitimate is that it is
        poorly written with even some potential misspellings including that of the
        domain name. \n
        \n
         Furthermore, the most common phishing emails will begin very generically as there
        are many emails sent at once to different people. This results in many phishing
        emails beginning with greetings such as “Dear Customer” or “Dear Employee”. However
        this does not mean that an email that does use your name is not a phishing email as
        there are many social engineering methods that an attacker could use to find your name,
        this is referred to as a spear-phishing attack so it is best to look for other signs also. \n
        \n
        Moreover, it is good to be on the look-out for emails that request urgent action is taken,
        such as emails warning that “your account will be closed” or “your account has been
        compromised” as these are used to generate a greater concern from the reader increasing the
        chance of the reader clicking a link. \n \n

        It is important to note that phishing scams are not only received through email. They can come
        through a variety of means, such as through messenger apps. It is important to make sure any message
        received in relation to anything about private credentials is legit, this can be done by contacting the
        sender company at an email or phone number you have used for legitimate contact before. Some sites that
        are commonly impersonated by scammers are Facebook, Twitter and LinkedIn, with LinkedIn recording the most
        attempted phishing scams of the three.   \n \n

        Signs that you may be on a phishing website include a pop-up or pop-ups being displayed as
        soon as you enter the website. These pop-ups will usually request your username and
        password. If this happens it is best to leave the site without entering any information. \n
        \n
        Another way to check if a site is secure is to check the web address. It is worth having a
        closer look at things such as misspelled/incorrect company names. Additionally, when looking
        at the web address “https” is safer than “http”.</string>
    <string name="page9">You enter your credentials into the web-page that the
        link directed you too. You filled it in quickly as you wanted to get
        home to watch "The Chase". Once home you relax for the evening and
        forget about the email. </string>
    <string name="page9_choice1">Go to bed early</string>
    <string name="page9_choice2">Stay up later</string>
    <string name="startButton">Begin the game</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="phishing">Phishing Story</string>
    <string name="index_title">Choose an Option</string>
    <string name="malwareButtonText">Malware Story</string>
    <string name="attacker_story">Attacker Story</string>
    <string name="quizString">Quiz</string>
    <string name="page02">You arrive at work in the morning, after parking your car, while walking into work you discover a USB stick lying in the
        car park. You pick it up and take it into work with you.</string>
    <string name="page02_choice1">Plug it in</string>
    <string name="page02_choice2">Hand into reception</string>
    <string name="page12">You plug in the USB to your computer to see what’s on it and find nothing. You think someone may have just dropped a
        new USB. You decide to forget about it and continue your work for the day.</string>
    <string name="page12_choice1">Respond to emails</string>
    <string name="page12_choice2">Answer calls</string>
    <string name="page22">After handing the USB in to the reception you go to your desk to begin working. However, before starting you decide to
        check your email. Inside, there is an email offering you a discount on Netflix.</string>
    <string name="page22_choice1">Click the link</string>
    <string name="page22_choice2">Ignore the link</string>
    <string name="page32">You finish work for the morning and decide it would be a good time to stop and have lunch. You leave your desk to grab
        something to eat.</string>
    <string name="page32_choice1">Have a sandwich</string>
    <string name="page32_choice2">Have a bowl of soup</string>
    <string name="page42">The link takes you to a site that does not seem legit, you leave the site quickly after clicking on nothing within it.
        You go back to the work you were doing before.</string>
    <string name="page42_choice1">Respond to emails</string>
    <string name="page42_choice2">Answer calls</string>
    <string name="question">Question: 1/x</string>
    <string name="score">Score: 0</string>
    <string name="category">Category:</string>
    <string name="difficulty">Difficulty:</string>
    <string name="_00_30">00:30</string>
    <string name="here_will_be_the_question_text_nhere_will_be_the_question_text_nhere_will_be_the_question_text">Here will be the question text Here will be the question text Here will be the question text</string>
    <string name="confirm">Confirm</string>
    <string name="option_3">Option 3</string>
    <string name="option_1">Option 1</string>
    <string name="option_2">Option 2</string>
</resources>